--- a/style.css
+++ b/style.css
@@ -99,6 +99,14 @@ body {
     border-radius: 2px;
 }
 
+.container button:hover{
+    background-color: black;
+    color: var(--primary-color);
+    border: solid 2px var(--primary-color);
+    transform: scale(110%);
+    transition: 0.5s;
+}
+
 footer {
     color: var(--primary-color);
 }
